--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,5 +22,11 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
         cache: maven
+        
+    - name: Setup Buildtools
+      # You may pin to the exact commit or the version.
+      # uses: buildtool/setup-buildtools-action@db7e5cadc3736664bea2000a15af88d22920901a
+      uses: buildtool/setup-buildtools-action@v0.0.1
+      
     - name: Build with Maven
       run: mvn -B clean package --file pom.xml
