Modified ChatUtils with better colors, added more virtual inventories as aliases of WorkbenchCommand, added possibility to reload maps config via the MainCommand reload argument (also added command feedback), renamed "shouldScaleDown" field to "scaleDown", improved ImageMapRenderer performance by putting the image resizing code in the constructor.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -44,9 +44,18 @@ commands:
     permission: 'quiteusefulcommands.enderchest'
   
   workbench:
-    description: 'Open a crafting table'
+    description: 'Open a workbench'
     usage: '/<command>'
-    aliases: ['craft', 'workbench', 'wb', 'crafting']
+    aliases: [
+        'craft', 'wbench',
+        'enchanting', 'etable',
+        'loom',
+        'cartography', 'cartographytable', 'carttable',
+        'stonecutter',
+        'grindstone',
+        'smithingtable', 'smithtable',
+        'anvil', 'rename'
+    ]
     permission: 'quiteusefulcommands.crafting'
     
   invsee:
