Added mojang mappings, and disabled workbenches other than crafting table, because they are not supported yet :(

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -48,13 +48,13 @@ commands:
     usage: '/<command>'
     aliases: [
         'craft', 'wbench',
-        'enchanting', 'etable',
-        'loom',
-        'cartography', 'cartographytable', 'carttable',
-        'stonecutter',
-        'grindstone',
-        'smithingtable', 'smithtable',
-        'anvil', 'rename'
+#        'enchanting', 'etable',
+#        'loom',
+#        'cartography', 'cartographytable', 'carttable',
+#        'stonecutter',
+#        'grindstone',
+#        'smithingtable', 'smithtable',
+#        'anvil', 'rename'
     ]
     permission: 'quiteusefulcommands.crafting'
     
