Added GodModeCommand, GodModeListener and CommandManager#godmodePlayers to manage player in godmode & changed CommandManager#frozenPlayers to a Set because so it can't contain multiple of the same player

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -85,3 +85,8 @@ commands:
     usage: '/<command> <player>'
     permission: 'quiteusefulcommands.freeze'
     
+  godmode:
+    description: 'Toggles godmode for you or <player>'
+    usage: '/<command> [<player>]'
+    permission: 'quiteusefulcommands.godmode'
+    
