Added SpeedCommand to set fly/walk speed, added util to get sorted arguments, added GodModeCommand

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -90,3 +90,9 @@ commands:
     usage: '/<command> [<player>]'
     permission: 'quiteusefulcommands.godmode'
     
+  speed:
+    description: "Set your or <player>'s fly/walk speed to <amount>"
+    usage: '/<command> <fly | walk> <speed> [player]'
+    aliases: ['flyspeed', 'walkspeed']
+    permission: 'quiteusefulcommands.speed'
+    
